sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:6: error: not found: value v
	v=0
        ^AlgCocktailSort2:10: error: not found: value v
				v=v+1
                                ^AlgCocktailSort2:18: error: not found: value v
			v=v+1
                        ^AlgCocktailSort2:23: error: not found: value v
 while (v!=0)
        ^